app/crates/ironstate-aggregate/tests/ui/float_in_vec.stderr
error: floats cannot appear in stable-hashed state.
       Floating-point results are not identical across platforms and optimization levels, so a digest would not be reproducible.
       Use an integer or fixed-point representation, or mark the field `#[stable_hash(skip)]` if it is not part of the value's identity.
 --> tests/ui/float_in_vec.rs:3:18
  |
3 |     samples: Vec<f32>,
  |                  ^^^
