app/crates/ironstate-aggregate/tests/ui/float_in_vec.rs
#[derive(ironstate_aggregate::StableHash)]
struct Series {
    samples: Vec<f32>,
}

fn main() {}
